<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_close"
        android:layout_marginTop="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_20"
        android:padding="@dimen/space_10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_acc"
        android:textSize="@dimen/font_title"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/space_n10" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_details"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginStart="@dimen/space_40"
        android:layout_marginEnd="@dimen/space_40" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_ic"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ic"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginStart="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_20"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_ic_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_ic"
            android:inputType="number"
            android:drawablePadding="15dp"
            android:paddingTop="@dimen/space_10"
            android:paddingBottom="@dimen/space_10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_location"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginStart="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_20"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_state_location"
            android:inputType="number"
            android:drawablePadding="15dp"
            android:paddingTop="@dimen/space_10"
            android:paddingBottom="@dimen/space_10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_contact"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact"
        android:inputType="text"
        android:layout_marginBottom="@dimen/space_10"
        android:layout_marginStart="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_20"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_contact_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_contact"
            android:drawablePadding="15dp"
            android:paddingTop="@dimen/space_10"
            android:paddingBottom="@dimen/space_10" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginStart="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_20"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textColor="@color/primary"
        android:backgroundTint="@color/white"
        android:onClick="closeActivity"
        app:strokeColor="@color/primary"
        app:strokeWidth="@dimen/line_height"
        android:layout_marginStart="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_20"
        android:layout_marginTop="@dimen/space_n5"
        android:layout_marginBottom="@dimen/space_30"
        android:layout_gravity="center" />

</LinearLayout>