<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    tools:context=".ui.WelcomeActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textSize="@dimen/font_25"
        android:textColor="@color/black"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/font_app_name"
        android:textColor="@color/primary"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        app:srcCompat="@drawable/mycare_logo"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginBottom="@dimen/space_20" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="Login"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/space_n5" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="Register"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/space_20"
        android:layout_gravity="center">

        <View
            android:layout_width="@dimen/line_width"
            android:layout_height="@dimen/line_height"
            android:background="@color/primary"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/tv_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_other_method"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/space_10"
            android:layout_marginEnd="@dimen/space_10" />

        <View
            android:layout_width="@dimen/line_width"
            android:layout_height="@dimen/line_height"
            android:background="@color/primary"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/space_10"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_facebook"
            android:layout_marginEnd="@dimen/space_20" />

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_google"
            android:layout_marginStart="@dimen/space_20" />

    </LinearLayout>
</LinearLayout>
